v1.0.4 - 
Fixes:
* Fixed Eden's damage, range, and shot speed stats not properly changing

v1.0.3 - 
Additions:
* ColorParams
	- Used to store the color and parameters passed by Entity:SetColor (Priority, Duration, Fadeout, Shared)
* Entity:CopyStatusEffects() now copies the Color over to the target Entity, including the proper duration and other parameters
	- This can be toggled with the CopyColor argument, default true
* Isaac.IsInGame
* EntityPickup :
	- GetCollectibleCycle
	- RemoveCollectibleCycle
* Capsule :
	- Capsule constructor
* MenuManager :
	- GetViewPosition
	- SetViewPosition
* The luamod command now supports autocomplete
* Dear ImGui console now has a back button to allow controllers & Steam Deck to exit
* dsound.dll will log when it's been unloaded to help debug cases of REPENTOGON not loading
* Improved constructors for Sprite and Font classes
* Added documentation for the MC_PRE_LEVEL_SELECT callback
* Added gfxback property to custom achievements xml

Fixes:
* Fix a crash with weapon-copying familiars and Spirit Sword
* Fixed a possible crash when GetNullFrame is called on a Sprite that is not yet fully loaded
* Fixed MC_POST_ENTITY_TAKE_DMG triggering when the player touches the white fireplace in downpour/dross
* Fix Card Against Humanity only ever spawning regular poops
* Fix crawlspace floors (and possibly other unnoticed cases) not rendering
* Fix Entity:CopyStatusEffects(Entity, Entity) doing nothing
* Fix potential issue with XMLData.GetNumEntries
* Improve paramater validation for MC_PRE_LEVEL_SELECT to prevent possible crashes
* Modify vanilla function Game():GetPlayer to prevent possible crashes
* Changelog can now be safely closed using the "menu back" button e.g. Esc
* Fixed AnimationData:IsLoopingAnimation returning boolean, instead of integer
* Fixed a custom cutscene issue that played the Intro on cases where it shouldnt

v1.0.2 - 
Additions:
* Added Pickup:GetAlternatePedestal()